proteomics data description

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ data/processed/E_run*
 data/processed/F_run*
 data/processed/seurat/*
 data/processed/seurat_afterQC/*
+data/processed/KMproteomics/*
+data/processed/plasmaProteomics/*
